# mlmpfr

./: .gitignore  .travis.yml  Changes  Makefile  README.md  TODO  _oasis  dune  dune-project  dune-workspace  mlmpfr.ml  mlmpfr.opam  mlmpfr_stubs.c  mlmpfr_stubs.h  mpfr.ml  mpfr.mli  test.ml
.github/workflows/: build.yml  odoc.yaml
config/: discover.ml
doc/: Makefile
examples/: dune  example.ml  rndo_add.ml  sample.ml
opam/: descr  opam  url
opam/4.0.0/: opam
src/: dune  mlmpfr.ml  mlmpfr.mli  mlmpfr_stubs.c  mlmpfr_stubs.h  mpfr.ml  mpfr.mli
src/config/: discover.ml
testsuite/: Makefile  assignmentfunctions.c  assignmentfunctions.ml  basicarithmeticfunctions.c  basicarithmeticfunctions.ml  common.ml  comparisonfunctions.c  comparisonfunctions.ml  comparisonoperators.ml  conversionfunctions.c  conversionfunctions.ml  dune  exceptionrelatedfunctions.c  exceptionrelatedfunctions.ml  initializationfunctions.c  initializationfunctions.ml  integerandremainderrelated.ml  integerandremainderrelatedfunctions.c  integerandremainderrelatedfunctions.ml  miscellaneousfunctions.c  miscellaneousfunctions.ml  roundingrelatedfunctions.c  roundingrelatedfunctions.ml  specialfunctions.c  specialfunctions.ml
testsuite/conversion/: conversionfunctions.c  conversionfunctions.ml  dune
testsuite/refs/: dune  makefile
utils/: mlmpfr_compatibility_test.c  mpfr_version.c  mpfr_version.ml
