(env
 (dev
  (flags
   (:standard -ccopt))
  (c_flags
   (:standard -O2 -Wall -Wextra -g)
   (:include c_flags.sexp)
   (:include c_library_flags.sexp))
  (env-vars
   (LD_LIBRARY_PATH /usr/local/lib)))
 (release
  (flags
   (:standard -warn-error))
  (c_flags
   (:standard -O2 -Werror)
   (:include c_flags.sexp)
   (:include c_library_flags.sexp))))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
