(tests
  (deps (glob_files *.data))
  (names basicarithmeticfunctions comparisonfunctions
         conversionfunctions exceptionrelatedfunctions
         initializationfunctions integerandremainderrelatedfunctions
         miscellaneousfunctions roundingrelatedfunctions
         specialfunctions)
  (libraries mlmpfr))
