; conversion functions
(rule
 (target conversionfunctions.ref)
 (deps   conversionfunctions.c)
 (action (run %{cc} -o %{target} %{deps} -lmpfr)))

(rule
 (targets fpif_export.expected conversionfunctions.expected)
 (deps conversionfunctions.ref (file fpif_import.data))
 (action (with-stdout-to conversionfunctions.expected (run %{deps}))))

(rule
 (targets fpif_export.output conversionfunctions2.output)
 (deps conversionfunctions.exe (file fpif_import.data))
 (action (with-stdout-to conversionfunctions2.output (run %{deps}))))

(test
 (deps conversionfunctions.expected conversionfunctions2.output)
 (name conversionfunctions)
 (libraries mlmpfr)
 (action (run %{test} fpif_import.data)))

(rule
 (alias runtest)
 (deps fpif_export.output fpif_export.expected)
 (action (run diff fpif_export.output fpif_export.expected)))
